--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
             <a href="{{ url_for('journal')}}"><i class="ph-magnifying-glass-plus-fill"></i>journal</a>
             <a href="{{ url_for('about')}}"><i class="ph-users-three-fill"></i>about</a>
             <a href="{{ url_for('projects')}}"><i class="ph-gear-six-fill"></i>projects</a>
+            <a href="{{ url_for('pong')}}"><i class="ph-game-controller-fill"></i>pong</a>
             <div id="offline_icon" class="ph-wifi-slash" style="margin-right: 30px; margin-left: auto;"></div>
         </div>
     </div>
